tests/errors/continue-values-while.ari
fn main() -> i64 {
  while true {
    continue 1;
  }
  return 0;
}
